--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer>
+<footer class="p-4 text-center">
 	<p>&copy; {currentYear}</p>
 </footer>
