--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -2,7 +2,7 @@
 ---
 
 <div class="p-8">
-	<main class="prose mx-auto">
+	<main class="prose dark:prose-invert mx-auto">
 		<h1>Welcome to Play/Pass</h1>
 	</main>
 </div>
