--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,21 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import boardGames from '../../fixtures/board-games.json';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const sortedGames = boardGames.sort((a, b) => b.score - a.score);
 ---
 
 <Layout>
-	<Welcome />
+	<div class="p-8">
+		<main class="prose dark:prose-invert mx-auto">
+			<h1>Play/Pass Leaderboard</h1>
+			<ol>
+				{sortedGames.map((game) => (
+					<li>
+						{game.name} - {Math.round(game.score * 100)}%
+					</li>
+				))}
+			</ol>
+		</main>
+	</div>
 </Layout>
