Fix dark mode text color

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="p-4 text-center">
+<footer class="p-4 text-center text-black dark:text-white">
 	<p>&copy; {currentYear}</p>
 </footer>
