--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 <header class="container mx-auto p-4">
 	<nav>
-		<a href="/">Home</a>
+		<a href="/" class="text-black dark:text-white">Home</a>
 	</nav>
 </header>
