--- a/src/pages/boardgame/[id].astro
+++ b/src/pages/boardgame/[id].astro
@@ -1,32 +1,32 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import boardGames from '../../../fixtures/board-games.json';
+import Layout from "../../layouts/Layout.astro";
+import boardgames from "../../../fixtures/boardgames.json";
 
 export async function getStaticPaths() {
-  return boardGames.map((game) => ({
+  return boardgames.map((game) => ({
     params: { id: game.id.toString() },
     props: { game },
   }));
 }
 
 const { game } = Astro.props;
-const sortedGames = boardGames.sort((a, b) => b.score - a.score);
-const rank = sortedGames.findIndex(g => g.id === game.id) + 1;
+const sortedGames = boardgames.sort((a, b) => b.score - a.score);
+const rank = sortedGames.findIndex((g) => g.id === game.id) + 1;
 ---
 
 <Layout>
-	<div class="p-8">
-		<main class="prose dark:prose-invert mx-auto">
-			<h1>{game.name}</h1>
-			<section>
-				<h2>Game Statistics</h2>
-				<dl>
-					<dt>Current Rank:</dt>
-					<dd>{rank}</dd>
-					<dt>Current Score:</dt>
-					<dd>{Math.round(game.score * 100)}%</dd>
-				</dl>
-			</section>
-		</main>
-	</div>
+  <div class="p-8">
+    <main class="prose dark:prose-invert mx-auto">
+      <h1>{game.name}</h1>
+      <section>
+        <h2>Game Statistics</h2>
+        <dl>
+          <dt>Current Rank:</dt>
+          <dd>{rank}</dd>
+          <dt>Current Score:</dt>
+          <dd>{Math.round(game.score * 100)}%</dd>
+        </dl>
+      </section>
+    </main>
+  </div>
 </Layout>
